h5菜单逻辑修改

--- a/project/yazhou-h5/src/css/pages/menu.scss
+++ b/project/yazhou-h5/src/css/pages/menu.scss
@@ -189,7 +189,7 @@
             }
 
             &.current {
-                background: var(--q-color-page-bg-color-115);
+                background: var(--q-gb-bg-lg-5);
 
                 &.is-favorite {
                     background: var(--q-color-page-bg-color-115);
